fixed layout issues

--- a/src/styles/app.page.module.css
+++ b/src/styles/app.page.module.css
@@ -1,21 +1,13 @@
 .page {
   box-sizing: border-box;
-  display: flex;
+  display: grid;
+  grid-template-areas:
+    'graph output'
+    'graph properties'
+    'library properties';
+  grid-template-columns: 1fr auto;
+  grid-template-rows: 1fr 1fr auto;
   gap: 1rem;
   padding: 1rem;
   height: 100svh;
-}
-
-.mainSection {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  width: 75%;
-}
-
-.sideSection {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  width: 25%;
 }
